2014-10-23 John Wu <John dot Wu at ACM dot org>
	* src/selectParser.yy, src/selectLexer.ll: turn
	FORMAT_UNIXTIME_LOCAL and FORMAT_UNIXTIME_GMT into fixed tokens to
	avoid conflicts with two-argument functions
	* Makefile.am: put back bin_SCRIPTS line to install fastbit-config
	script (a problem pointed out by Gunther Weber)

2014-10-22 John Wu <John dot Wu at ACM dot org>
	* src/selectParser.yy: add warning message about ignoring
	formating directive on unix time stamps (following suggestion from
	Jon Strabala)

2014-10-21 John Wu <John dot Wu at ACM dot org>
	* src/qExpr.h, src/qExpr.cpp, src/whereLexer.ll,
	src/whereParser.yy: add an initial implementation of functions in
	where clause: from_unixtime_local, from_unixtime_gmt,
	to_unixtime_local, to_unixtime_gmt (based on discussion with Jon
	Strabala at QuantumSI dot com)
	* src/whereClause.h: add explanation of the four time handling
	functions.

2014-10-20 John Wu <John dot Wu at ACM dot org>
	* src/qExpr.h, src/qExpr.cpp, src/column.h, src/column.cpp: rename
	format_unixtime to unixTimeScribe
	* src/colValues.h, src/colValues.cpp: add struct
	ibis::colValues::format_unixtime to allow a column integer or
	floating-point values to be printed out as unix time stamps

2014-10-18 John Wu <John dot Wu at ACM dot org>
	* doc/ibisCommandLine.html: update document to reflect the currect
	ibis code
	* tests/scripts/star2002.sh: add script to the list of files
	distributed (the previous dataset used to produce the sample
	output in doc/ibisCommandLine.html was not captured and can not
	reproduced)
	* doc/*.html: change all html page to use https instead of http to
	avoid complains about mixed content
	* examples/ibis.cpp: add option -m to allow mesh queries to by
	pass tableSelect (pass make check)

2014-10-17 John Wu <John dot Wu at ACM dot org>
	* examples/ibis.cpp: add global variable independent_parts to
	indicate whether to process each data partition separately.  By