@@ -418,7 +418,7 @@ int ibis::relic::write(const char* dt) const {
     }
 #endif
 
-    int32_t ierr = 0;
+    off_t ierr = 0;
     const uint32_t nobs = vals.size();
 #ifdef FASTBIT_USE_LONG_OFFSETS
     const bool useoffset64 = true;
